--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "prettier": "3.2.5",
+    "prisma": "5.12.0",
     "tsx": "4.7.1",
     "typescript": "5.4.3"
   }
