--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "fastify": "4.26.2"
+    "@prisma/client": "5.12.0",
+    "fastify": "4.26.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.12.3",
