--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@fastify/cors": "9.0.1",
     "@fastify/swagger": "8.14.0",
     "@fastify/swagger-ui": "3.0.0",
     "@prisma/client": "5.12.0",
