--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
+    "build": "tsup src --minify --format esm --out-dir dist",
+    "start": "node dist/server.mjs",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prettier": "prettier --write src",
     "lint": "eslint src --ext ts --max-warnings 0",
@@ -38,6 +43,7 @@
     "eslint-plugin-promise": "6.1.1",
     "prettier": "3.2.5",
     "prisma": "5.12.0",
+    "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.4.3"
   }
