--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@types/node": "20.12.3",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "eslint": "8.57.0",
